<resources>
    <string name="app_name">Frutiapp</string>
    <string name="et_nombre">Como te llamas?</string>
    <string name="Boton">Jugar</string>

    <string name="et_vidas">Manzanas:</string>
    <string name="jugador_nombre">Jugador</string>
    <string name="total_score">Score: 0</string>
    <string name="Boton_sumar">Comprobar</string>
    <string name="et_respuesta">Respuesta</string>
</resources>
